[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/TimerInGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Game.gd" type="Script" id=2]
[ext_resource path="res://UI/GameOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/CurrentLevel.gd" type="Script" id=4]
[ext_resource path="res://UI/LevelDone.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Tutorial.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/UI.gd" type="Script" id=7]
[ext_resource path="res://UI/OptionsInGame.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game/AudioManager.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "level_fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CurrentLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "level_fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CurrentLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Game" type="Node2D" groups=[
"Game",
]]
script = ExtResource( 2 )

[node name="CurrentLevel" type="Node2D" parent="." groups=[
"CurrentLevel",
]]
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="OptionsInGame" parent="UI" instance=ExtResource( 8 )]

[node name="GameOver" parent="UI" instance=ExtResource( 3 )]

[node name="LevelDone" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="Tutorial" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="TimerInGame" parent="UI" instance=ExtResource( 1 )]

[node name="AudioManager" type="Node" parent="." groups=[
"AudioManager",
]]
script = ExtResource( 9 )

[node name="LevelFadeAnimation" type="AnimationPlayer" parent="."]
anims/level_fade_in = SubResource( 1 )
anims/level_fade_out = SubResource( 2 )
